<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/coaches_ID"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/coaches_menu"
        android:icon="@drawable/coaches"/>

    <item
        android:id="@+id/library_ID"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/library_menu"
        android:icon="@drawable/video_library"/>

    <item
        android:id="@+id/chat_ID"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/messages_menu"
        android:icon="@drawable/chat"/>

    <item
        android:id="@+id/favorite_ID"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/favorite_menu"
        android:icon="@drawable/favorite"/>

    <item
        android:id="@+id/profile_ID"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/Profile_menu"
        android:icon="@drawable/profile"/>

</menu>