<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/LogoImg"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:src="@drawable/logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLayout"
        android:layout_below="@+id/LogoImg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="50sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_in_txt"
            android:textColor="@color/text_color_dark"
            android:textSize="15sp"
            android:fontFamily="@font/fontsfree_net_sf_pro_rounded_bold"/>

        <FrameLayout
            android:layout_width="250sp"
            android:layout_height="50sp"
            android:layout_marginTop="20sp"
            android:id="@+id/FrameLayout1">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/FaceBookLayout"
            android:layout_width="250sp"
            android:layout_height="50sp"
            android:background="@drawable/facebook_border">

            <ImageView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5sp"
                android:src="@drawable/facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/facebook"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/fontsfree_net_sf_pro_rounded_bold"/>


        </RelativeLayout>
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/GoogleLayout"
            android:layout_width="250sp"
            android:layout_height="50sp"
            android:layout_marginTop="12sp"
            android:background="@drawable/google_border">

            <ImageView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5sp"
                android:src="@drawable/google"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/google"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/fontsfree_net_sf_pro_rounded_bold"/>

        </RelativeLayout>

        <com.google.android.gms.common.SignInButton
            android:visibility="gone"
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="wrap_content"
        android:layout_height="80sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:fontFamily="@font/fontsfree_net_sf_pro_rounded_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_sign"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/terms_conditions"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/fontsfree_net_sf_pro_rounded_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/terms_condition"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </LinearLayout>


</RelativeLayout>