<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_height="50sp">

        <TextView
            android:text="@string/favorite_header"
            android:fontFamily="@font/fontsfree_net_sf_pro_rounded_bold"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/switchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerLayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/videoTxt"
            android:textColor="@color/white"
            android:background="@drawable/select"
            android:gravity="center"
            android:text="@string/videos_header"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"/>

        <TextView
            android:id="@+id/coachesTxt"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/unselect"
            android:gravity="center"
            android:text="@string/coaches_header"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"/>


    </LinearLayout>


    <TextView
        android:visibility="gone"
        android:id="@+id/messageTxt"
        android:textSize="20sp"
        android:fontFamily="@font/fontsfree_net_sf_pro_rounded_bold"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="No data found.!"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView

        android:layout_below="@+id/switchLayout"
        android:id="@+id/favoriteList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:background="@color/semi_trans"
        android:layout_marginBottom="-50dp"
        android:visibility="gone"
        android:id="@+id/viewPlayLayout"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/ep_video_view"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <ProgressBar
            android:indeterminateTint="@color/colorAccent"
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/dpi_50"
            android:layout_height="@dimen/dpi_50"/>
    </RelativeLayout>


</RelativeLayout>